# http_server

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  server.conf
config/: server.conf  server_tls.conf
containers/: server.Dockerfile  server_tls.Dockerfile
include/: config.h  greeting.h  openssl.h  server.h  utils.h
src/: config.c  greeting.c  main.c  server.c  utils.c
ssl_data/: ca.crt  ca.key  ca.srl  client.crt  client.enc.key  client.key  server.crt  server.enc.key  server.key
